--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="src/styles/sidebar-footer.css">
     <link rel="stylesheet" href="src/styles/main-content.css">
     <link rel="stylesheet" href="src/styles/principal.css">
+    <link rel="stylesheet" href="src/styles/media-query.css">
 
     <link rel="shortcut icon" href="src/assets/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
@@ -78,15 +79,17 @@
                         </div>
                     </section>
                     <div class="footer-lateral">
-                        <ul class="linksInternos">
-                            <li><a href="#">Legal</a></li>
-                            <li><a href="#">Segurança e Centro de privacidade</a></li>
-                            <li><a href="#">Política de privacidade</a></li>
-                            <li><a href="#">Cookies</a></li>
-                            <li><a href="#">Sobre anúncios</a></li>
-                            <li><a href="#">Acessibilidade</a></li>
-                            <li><a href="#">Cookies</a></li>
-                        </ul>
+                        <div class="link">
+                            <ul class="linksInternos">
+                                <li><a href="#">Legal</a></li>
+                                <li><a href="#">Segurança e Centro de privacidade</a></li>
+                                <li><a href="#">Política de privacidade</a></li>
+                                <li><a href="#">Cookies</a></li>
+                                <li><a href="#">Sobre anúncios</a></li>
+                                <li><a href="#">Acessibilidade</a></li>
+                                <li><a href="#">Cookies</a></li>
+                            </ul>
+                        </div>
                         <div class="btn-globe">
                             <span>
                                 <button class="botao-globo">
